--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
             margin-top: 10px;
         }
 
-        /* Signup container and form styles */
+        /* Signup container and form styles with 20% size increase */
         #signup-container {
             text-align: center;
-            padding: 57.5849088px; /* Reducción del tamaño vertical en un 20% */
+            padding: 69.10189056px; /* 57.5849088px + 20% */
             background-color: #26213d;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: calc(100% - 33.2849088px); /* Reducción del tamaño horizontal en un 20% */
-            max-width: 963.9584px; /* Reducción del tamaño máximo en un 20% */
+            border-radius: 9.6px; /* 8px + 20% */
+            box-shadow: 0 0 12px rgba(0, 0, 0, 0.1); /* 10px + 20% */
+            width: calc(100% - 39.94189056px); /* 33.2849088px + 20% */
+            max-width: 1157.15008px; /* 963.9584px + 20% */
             position: fixed;
-            bottom: 50px; /* Fijar en la parte inferior */
+            bottom: 60px; /* 50px + 20% */
             left: 50%;
             transform: translateX(-50%);
             box-sizing: border-box;
@@ -98,31 +98,31 @@
 
         #signup-container h2 {
             font-family: 'Teko', sans-serif;
-            font-size: 48.790470016px;
+            font-size: 58.54856402px; /* 48.790470016px + 20% */
             font-weight: 600;
             color: #fff;
         }
 
         input[type="text"] {
-            padding: 28.99742976px; /* Reducción del tamaño en un 20% */
-            width: calc(100% - 28.99742976px); /* Reducción del tamaño horizontal en un 20% */
-            margin-bottom: 28.99742976px; /* Reducción del tamaño en un 20% */
+            padding: 34.79691571px; /* 28.99742976px + 20% */
+            width: calc(100% - 34.79691571px); /* 28.99742976px + 20% */
+            margin-bottom: 34.79691571px; /* 28.99742976px + 20% */
             border: 1px solid #ccc;
-            border-radius: 4px;
+            border-radius: 4.8px; /* 4px + 20% */
             box-sizing: border-box;
-            font-size: 38.217329px; /* Reducción del tamaño en un 20% */
+            font-size: 45.8607956px; /* 38.217329px + 20% */
             font-weight: 600;
             color: #fff;
         }
 
         button {
-            width: calc(100% - 28.99742976px); /* Reducción del tamaño horizontal en un 20% */
-            padding: 28.99742976px; /* Reducción del tamaño en un 20% */
-            font-size: 54.098928px; /* Reducción del tamaño en un 20% */
+            width: calc(100% - 34.79691571px); /* 28.99742976px + 20% */
+            padding: 34.79691571px; /* 28.99742976px + 20% */
+            font-size: 64.9187136px; /* 54.098928px + 20% */
             background-color: #4caf50;
             color: #fff;
             border: none;
-            border-radius: 4px;
+            border-radius: 4.8px; /* 4px + 20% */
             cursor: pointer;
             font-family: 'Teko', sans-serif;
         }
