--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Company</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap">
     <style>
         body {
             margin: 0;
@@ -97,7 +97,7 @@
         }
 
         #signup-container h2 {
-            font-family: 'Teko', sans-serif;
+            font-family: 'Barlow Condensed', sans-serif;
             font-size: 59px; /* 48.790470016px + 20% */
             font-weight: 600;
             color: #fff;
@@ -124,7 +124,7 @@
             border: none;
             border-radius: 5px; /* 4px + 20% */
             cursor: pointer;
-            font-family: 'Teko', sans-serif;
+            font-family: 'Barlow Condensed', sans-serif;
         }
 
         button:hover {
