--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <!-- Signup container and form -->
     <div id="signup-container">
         <h2>Stay tuned with the last news & updates</h2>
-        <form>
+        <form action="https://registration.gameosaur.com/" method="post">
             <input type="text" id="emailInput" placeholder="Enter your email" required>
             <br>
             <button type="submit">SIGN UP</button>
