--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
             width: calc(100% - 35px); /* 28.99742976px + 20% */
             padding: 35px; /* 28.99742976px + 20% */
             font-size: 65px; /* 54.098928px + 20% */
-            background-color: #4caf50;
-            color: #fff;
+            background-color: #2ada8e;
+            color: #2b2c38;
             border: none;
             border-radius: 5px; /* 4px + 20% */
             cursor: pointer;
@@ -128,7 +128,7 @@
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #35ffb2;
         }
 
     </style>
