--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
             font-size: 46px; /* 38.217329px + 20% */
             font-weight: 600;
             color: #fff;
+            input[type="text"]:focus {
+        color: #000; /* Cambiar a negro u otro color deseado */
         }
 
         button {
