--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
             box-sizing: border-box;
             font-size: 46px; /* 38.217329px + 20% */
             font-weight: 600;
-            color: #fff;
-            input[type="text"]:focus {
-        color: #000; /* Cambiar a negro u otro color deseado */
+            color: #1f1f22;
         }
 
         button {
