--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div id="signup-container">
         <h2>Stay tuned with the last news & updates</h2>
         <form action="https://registration.gameosaur.com/" method="post">
-            <input type="text" id="emailInput" placeholder="Enter your email" required>
+            <input type="text" id="emailInput" placeholder="Enter your email" name="email" required>
             <br>
             <button type="submit">SIGN UP</button>
         </form>
