--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             color: #fff;
             text-align: center;
             padding: 5px;
-            height: 50px; /* Adjust the height as needed */
+            height: 70px; /* Aumenta un 40% la altura del header */
             position: fixed;
             top: 0;
             width: 100%;
@@ -30,10 +30,10 @@
         }
 
         header img {
-            width: 30px;
-            height: auto;
-            margin-left: 20px;
-            margin-top: 10px;
+    width: 42px; /* Aumenta un 40% el ancho de la imagen */
+    height: auto;
+    margin-left: 20px;
+    margin-top: 10px;
         }
 
         header #logo {
