reset to fix box texts

--- a/index.html
+++ b/index.html
@@ -3,150 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Company</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap">
+    <title>Sign Up Page</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap">
     <style>
         body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            overflow: hidden; /* Prevent scrolling */
-            background-color: #000; /* Black background color */
-        }
-
-        header {
-            background-color: #000;
-            color: #fff;
-            text-align: center;
-            padding: 5px;
-            height: 70px; /* Aumenta un 40% la altura del header */
-            position: fixed;
-            top: 0;
-            width: 100%;
-            z-index: 1000;
+            font-family: 'Teko', sans-serif;
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            background-image: url('img/OverImage.png');
+            background-size: cover;
+            background-position: center;
         }
 
-        header img {
-    width: 42px; /* Aumenta un 40% el ancho de la imagen */
-    height: auto;
-    margin-left: 20px;
-    margin-top: 10px;
-        }
-
-        header #logo {
-            width: 400px; /* Adjust the width as needed */
-            height: auto;
-            margin-right: 80px;
-            margin-top: 270px;
-        }
-
-        #image-background {
-            position: fixed;
-            top: 49;
-            left: 0;
-            bottom: auto;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            object-position: top; /* Mantiene la parte superior de la imagen visible */
-            z-index: -1; /* Place the image behind other elements */
-        }
-
-        /* Responsive styles for mobile */
-        @media (max-width: 767px) {
-            header {
-                height: 40px; /* Adjust the height for mobile */
-            }
-
-            header img {
-                width: 20px; /* Adjust the size for mobile */
-                margin-left: 10px;
-                margin-top: 5px;
-            }
-
-            header #logo {
-                width: 30px; /* Adjust the width for mobile */
-                margin-right: 10px;
-            }
-        }
-
-        /* Additional styles for other content (removed signup styles) */
-
-        #thankYouMessage {
-            display: none;
-            margin-top: 10px;
-        }
-
-        /* Signup container and form styles with 20% size increase */
         #signup-container {
             text-align: center;
-            padding: 69px; /* 57.5849088px + 20% */
+            padding: 57.5849088px; /* Reducción del tamaño vertical en un 20% */
             background-color: #26213d;
-            border-radius: 10px; /* 8px + 20% */
-            box-shadow: 0 0 12px rgba(0, 0, 0, 0.1); /* 10px + 20% */
-            width: calc(100% - 40px); /* 33.2849088px + 20% */
-            max-width: 1157px; /* 963.9584px + 20% */
-            position: fixed;
-            bottom: 60px; /* 50px + 20% */
-            left: 50%;
-            transform: translateX(-50%);
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: calc(100% - 33.2849088px); /* Reducción del tamaño horizontal en un 20% */
+            max-width: 963.9584px; /* Reducción del tamaño máximo en un 20% */
+            margin: 14.3249472px; /* Reducción del margen en un 20% */
             box-sizing: border-box;
-        }
-
-        #signup-container h2 {
-            font-family: 'Barlow Condensed', sans-serif;
-            font-size: 59px; /* 48.790470016px + 20% */
-            font-weight: 600;
-            color: #fff;
         }
 
         input[type="text"] {
-            padding: 35px; /* 28.99742976px + 20% */
-            width: calc(100% - 35px); /* 28.99742976px + 20% */
-            margin-bottom: 35px; /* 28.99742976px + 20% */
+            padding: 28.99742976px; /* Reducción del tamaño en un 20% */
+            width: calc(100% - 28.99742976px); /* Reducción del tamaño horizontal en un 20% */
+            margin-bottom: 28.99742976px; /* Reducción del tamaño en un 20% */
             border: 1px solid #ccc;
-            border-radius: 15px; /* 4px + 20% */
+            border-radius: 4px;
             box-sizing: border-box;
-            font-size: 46px; /* 38.217329px + 20% */
+            font-size: 38.217329px; /* Reducción del tamaño en un 20% */
             font-weight: 600;
-            color: #1f1f22;
+            color: #252832;
         }
 
         button {
-            width: calc(100% - 35px); /* 28.99742976px + 20% */
-            padding: 35px; /* 28.99742976px + 20% */
-            font-size: 65px; /* 54.098928px + 20% */
+            width: calc(100% - 28.99742976px); /* Reducción del tamaño horizontal en un 20% */
+            padding: 28.99742976px; /* Reducción del tamaño en un 20% */
+            font-size: 54.098928px; /* Reducción del tamaño en un 20% */
             background-color: #2ada8e;
-            color: #2b2c38;
+            color: #fff;
             border: none;
-            border-radius: 15px; /* 4px + 20% */
+            border-radius: 4px;
             cursor: pointer;
-            font-family: 'Barlow Condensed', sans-serif;
+            font-family: 'Teko', sans-serif;
         }
 
         button:hover {
             background-color: #35ffb2;
         }
-
     </style>
 </head>
 <body>
 
-    <header>
-        <div>
-            <img src="img/menu.png" alt="Menu Icon">
-            <!-- Use "img/menu.png" for the small icon image -->
-        </div>
-    </header>
-
-    <!-- Image background -->
-    <img id="image-background" src="img/background-image.jpg" alt="Background Image">
-
-    <!-- Signup container and form -->
-    <div id="signup-container">
+       <!-- Signup container and form -->
+       <div id="signup-container">
         <h2>Stay tuned with the last news & updates</h2>
         <form action="https://registration.gameosaur.com/" method="post">
             <input type="text" id="emailInput" placeholder="Enter your email" name="email" required>
@@ -155,13 +71,5 @@
         </form>
     </div>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            var image = document.getElementById('image-background');
-            // You can adjust the source and alt text accordingly
-            image.src = "img/background-image.jpg";
-            image.alt = "Background Image Alt Text";
-        });
-    </script>
 </body>
 </html>
