--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Page</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap">
+    <link rel="stylesheet" href="style.css"> <!-- Ruta relativa al archivo de estilo -->
     <style>
         body {
             font-family: 'Teko', sans-serif;
@@ -13,7 +15,7 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-image: url('img/OverImage.png');
+            background-image: url('/img/background-image.jpg'); /* Ruta absoluta */
             background-size: cover;
             background-position: center;
         }
@@ -22,12 +24,22 @@
             text-align: center;
             padding: 57.5849088px; /* Reducción del tamaño vertical en un 20% */
             background-color: #26213d;
-            border-radius: 8px;
+            border-radius: 35px; /* Redondeo de las esquinas en un 20% */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: calc(100% - 33.2849088px); /* Reducción del tamaño horizontal en un 20% */
             max-width: 963.9584px; /* Reducción del tamaño máximo en un 20% */
-            margin: 14.3249472px; /* Reducción del margen en un 20% */
+            position: fixed;
+            bottom: 50px; /* Fijar en la parte inferior */
+            left: 50%;
+            transform: translateX(-50%);
             box-sizing: border-box;
+        }
+
+        #signup-container h2 {
+            font-family: 'Teko', sans-serif;
+            font-size: 48.790470016px;
+            font-weight: 600;
+            color: #fff;
         }
 
         input[type="text"] {
@@ -35,27 +47,27 @@
             width: calc(100% - 28.99742976px); /* Reducción del tamaño horizontal en un 20% */
             margin-bottom: 28.99742976px; /* Reducción del tamaño en un 20% */
             border: 1px solid #ccc;
-            border-radius: 4px;
+            border-radius: 10px; /* Redondeo de las esquinas en un 20% */
             box-sizing: border-box;
             font-size: 38.217329px; /* Reducción del tamaño en un 20% */
             font-weight: 600;
-            color: #252832;
+            color: #fff;
         }
 
         button {
             width: calc(100% - 28.99742976px); /* Reducción del tamaño horizontal en un 20% */
             padding: 28.99742976px; /* Reducción del tamaño en un 20% */
             font-size: 54.098928px; /* Reducción del tamaño en un 20% */
-            background-color: #2ada8e;
+            background-color: #4caf50;
             color: #fff;
             border: none;
-            border-radius: 4px;
+            border-radius: 10px; /* Redondeo de las esquinas en un 20% */
             cursor: pointer;
             font-family: 'Teko', sans-serif;
         }
 
         button:hover {
-            background-color: #35ffb2;
+            background-color: #45a049;
         }
     </style>
 </head>
