--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
     <style>
         body {
             font-family: 'Teko', sans-serif;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
             margin: 0;
-            background-image: url('/img/background-image.jpg'); /* Ruta absoluta */
-            background-size: cover;
-            background-position: center;
+            padding: 0;
+            background-color: #2b2b2b; /* Black background color */
+            overflow: hidden; /* Prevent scrolling */
         }
 
         header {
@@ -58,7 +54,7 @@
             width: calc(100% - 33.2849088px); /* Reducción del tamaño horizontal en un 20% */
             max-width: 963.9584px; /* Reducción del tamaño máximo en un 20% */
             position: fixed;
-            bottom: 50px; /* Fijar en la parte inferior */
+            bottom: 80px; /* Fijar en la parte inferior */
             left: 50%;
             transform: translateX(-50%);
             box-sizing: border-box;
