--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         }
 
         #signup-container h2 {
+            padding: 35px;
             font-family: 'Barlow Condensed', sans-serif;
             font-size: 59px; /* 48.790470016px + 20% */
             font-weight: 600;
