air to text Stay

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 
         #signup-container h2 {
             padding: 40px;
+            bottom: 20px;
             font-family: 'Barlow Condensed', sans-serif;
             font-size: 59px; /* 48.790470016px + 20% */
             font-weight: 600;
