Font size and capitals

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             padding: 40px;
             bottom: 20px;
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 59px; /* 48.790470016px + 20% */
-            font-weight: 600;
+            font-size: 38px; /* 48.790470016px + 20% */
+            font-weight: 200;
             color: #fff;
         }
 
@@ -150,7 +150,7 @@
 
        <!-- Signup container and form -->
        <div id="signup-container">
-        <h2>Stay tuned with the last news & updates</h2>
+        <h2>STAY TUNED WITH THE LATEST NEWS & UPDATES</h2>
         <form action="https://registration.gameosaur.com/" method="post">
             <input type="text" id="emailInput" placeholder="Enter your email" name="email" required>
             <br>
