--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Page</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap">
-    <link rel="stylesheet" href="style.css"> <!-- Ruta relativa al archivo de estilo -->
+
     <style>
         body {
-            font-family: 'Teko', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #2b2b2b; /* Black background color */
@@ -85,7 +84,7 @@
         /* Signup container and form styles with 20% size increase */
         #signup-container {
             text-align: center;
-            padding: 40px; /* 57.5849088px + 20% */
+            padding: 50px; /* 57.5849088px + 20% */
             background-color: #26213d;
             border-radius: 10px; /* 8px + 20% */
             box-shadow: 0 0 12px rgba(0, 0, 0, 0.1); /* 10px + 20% */
@@ -135,9 +134,8 @@
         button:hover {
             background-color: #35ffb2;
         }
-        button:hover {
-            background-color: #45a049;
-        }
+
+        
     </style>
 </head>
 <body>
@@ -148,6 +146,9 @@
             <!-- Use "img/menu.png" for the small icon image -->
         </div>
     </header>
+
+    <!-- Image background -->
+    <img id="image-background" src="img/background-image.jpg" alt="Background Image">
 
        <!-- Signup container and form -->
        <div id="signup-container">
