--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             width: calc(100% - 40px); /* 33.2849088px + 20% */
             max-width: 1157px; /* 963.9584px + 20% */
             position: fixed;
-            bottom: 60px; /* 50px + 20% */
+            bottom: 100px; /* 50px + 20% */
             left: 50%;
             transform: translateX(-50%);
             box-sizing: border-box;
@@ -127,7 +127,7 @@
             border: none;
             border-radius: 15px; /* 4px + 20% */
             cursor: pointer;
-            font-family: 'Barlow Condensed', sans-serif;
+            font-family: 'Teko', sans-serif;
             font-weight: 500;
         }
 
