barlow in input

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             border: 1px solid #ccc;
             border-radius: 15px; /* 4px + 20% */
             box-sizing: border-box;
+            font-family: 'Barlow Condensed', sans-serif;
             font-size: 46px; /* 38.217329px + 20% */
             font-weight: 600;
             color: #1f1f22;
