--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             background-color: #000;
             color: #fff;
             text-align: center;
-            padding: 5px;
-            height: 70px; /* Aumenta un 40% la altura del header */
+            padding: 7px; /* Aumenta un 40% el padding del header */
+            height: 98px; /* Aumenta un 40% la altura del header */
             position: fixed;
             top: 0;
             width: 100%;
@@ -31,17 +31,19 @@
         }
 
         header img {
-    width: 42px; /* Aumenta un 40% el ancho de la imagen */
-    height: auto;
-    margin-left: 20px;
-    margin-top: 10px;
+            width: 58.8px; /* Aumenta un 40% el ancho de la imagen */
+            height: auto;
+            margin-left: 28px; /* Aumenta un 40% el margen izquierdo de la imagen */
+            margin-top: 14px; /* Aumenta un 40% el margen superior de la imagen */
+
         }
 
         header #logo {
-            width: 400px; /* Adjust the width as needed */
+            width: 560px; /* Aumenta un 40% el ancho del logo */
             height: auto;
-            margin-right: 80px;
-            margin-top: 270px;
+            margin-right: 112px; /* Aumenta un 40% el margen derecho del logo */
+            margin-top: 378px; /* Aumenta un 40% el margen superior del logo */
+
         }
 
         #image-background {
