--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         #signup-container h2 {
             padding: 40px;
             bottom: 20px;
-            font-family: 'Barlow Condensed', sans-serif;
+            font-family: 'Rajdhani', sans-serif;
             font-size: 45px; /* 48.790470016px + 20% */
-            font-weight: 500;
+            font-weight: 600;
             color: #fff;
         }
 
