--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             font-family: 'Rajdhani', sans-serif;
             font-size: 45px; /* 48.790470016px + 20% */
             font-weight: 600;
-            color: #fff;
+            color: #e5e5e5;
         }
 
         input[type="text"] {
