--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         #signup-container {
             text-align: center;
             padding: 50px; /* 57.5849088px + 20% */
-            background-color: #26213d;
+            background-color: #302467;
             border-radius: 10px; /* 8px + 20% */
             box-shadow: 0 0 12px rgba(0, 0, 0, 0.1); /* 10px + 20% */
             width: calc(100% - 40px); /* 33.2849088px + 20% */
