--- a/index.html
+++ b/index.html
@@ -82,9 +82,6 @@
         #thankYouMessage {
             display: none;
             margin-top: 10px;
-            font-family: 'Rajdhani', sans-serif; /* Usa la misma fuente que el texto del contenedor */
-            font-size: 20px; /* Ajusta el tamaño de la fuente según sea necesario */
-            color: #818181;
         }
 
         /* Signup container and form styles with 20% size increase */
@@ -160,18 +157,12 @@
        <!-- Signup container and form -->
        <div id="signup-container">
         <h2>STAY TUNED WITH THE LATEST NEWS & UPDATES</h2>
-        <form action="https://registration.gameosaur.com/" method="post" id="signup-form"> <!-- Aquí se agregó el ID -->
+        <form action="https://registration.gameosaur.com/" method="post">
             <input type="text" id="emailInput" placeholder="Enter your email" name="email" required>
             <br>
             <button type="submit">SIGN UP</button>
         </form>
     </div>
-
-  <!-- Thank you message -->
-  <div id="thankYouMessage">
-    Thank you for signing up!
-</div>
-
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
@@ -179,20 +170,6 @@
             // You can adjust the source and alt text accordingly
             image.src = "img/background-image.jpg";
             image.alt = "Background Image Alt Text";
-
-           // Obtén el formulario y escucha el evento de envío
-           var form = document.getElementById('signup-form');
-            form.addEventListener('submit', function(event) {
-                // Evita el envío del formulario predeterminado
-                event.preventDefault();
-
-                // Muestra el mensaje de agradecimiento
-                var thankYouMessage = document.getElementById('thankYouMessage');
-                thankYouMessage.style.display = 'block';
-
-                // Opcional: Puedes ocultar el formulario si lo deseas
-                //form.style.display = 'none';
-            });
         });
     </script>
 </body>
