--- a/index.html
+++ b/index.html
@@ -79,22 +79,22 @@
 
         /* Additional styles for other content (removed signup styles) */
 
-        #thankYouMessage {
+       /* #thankYouMessage {
             display: none;
             margin-top: 10px;
         }
 
         /* Signup container and form styles with 20% size increase */
-        #signup-container {
+      /* #signup-container {
             text-align: center;
-            padding: 50px; /* 57.5849088px + 20% */
+            padding: 50px; 
             background-color: #492a8e;
-            border-radius: 30px; /* 8px + 20% */
-            box-shadow: 0 0 12px rgba(0, 0, 0, 0.1); /* 10px + 20% */
-            width: calc(100% - 40px); /* 33.2849088px + 20% */
-            max-width: 1157px; /* 963.9584px + 20% */
+            border-radius: 30px; 
+            box-shadow: 0 0 12px rgba(0, 0, 0, 0.1); 
+            width: calc(100% - 40px); 
+            max-width: 1157px;
             position: fixed;
-            bottom: 100px; /* 50px + 20% */
+            bottom: 100px;
             left: 50%;
             transform: translateX(-50%);
             box-sizing: border-box;
@@ -104,32 +104,32 @@
             padding: 40px;
             bottom: 20px;
             font-family: 'Rajdhani', sans-serif;
-            font-size: 45px; /* 48.790470016px + 20% */
+            font-size: 45px;
             font-weight: 600;
             color: #e5e5e5;
         }
 
         input[type="text"] {
-            padding: 35px; /* 28.99742976px + 20% */
-            width: calc(100% - 35px); /* 28.99742976px + 20% */
-            margin-bottom: 35px; /* 28.99742976px + 20% */
+            padding: 35px;
+            width: calc(100% - 35px); 
+            margin-bottom: 35px; 
             border: 1px solid #ccc;
-            border-radius: 15px; /* 4px + 20% */
+            border-radius: 15px;
             box-sizing: border-box;
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 46px; /* 38.217329px + 20% */
+            font-size: 46px;
             font-weight: 600;
             color: #1f1f22;
         }
 
         button {
-            width: calc(100% - 35px); /* 28.99742976px + 20% */
-            padding: 35px; /* 28.99742976px + 20% */
-            font-size: 65px; /* 54.098928px + 20% */
+            width: calc(100% - 35px);
+            padding: 35px; 
+            font-size: 65px; 
             background-color: #2ada8e;
             color: #2b2c38;
             border: none;
-            border-radius: 15px; /* 4px + 20% */
+            border-radius: 15px;
             cursor: pointer;
             font-family: 'Teko', sans-serif;
             font-weight: 500;
