--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         button:hover {
             background-color: #35ffb2;
         }
-
+*/
         
     </style>
 </head>
@@ -154,14 +154,16 @@
     <!-- Image background -->
     <img id="image-background" src="img/background-image.jpg" alt="Background Image">
 
+
+
        <!-- Signup container and form -->
-       <div id="signup-container">
+     <!--<div id="signup-container">
         <h2>STAY TUNED WITH THE LATEST NEWS & UPDATES</h2>
         <form action="https://registration.gameosaur.com/" method="post">
             <input type="text" id="emailInput" placeholder="Enter your email" name="email" required>
             <br>
             <button type="submit">SIGN UP</button>
-        </form>
+        </form>-->
     </div>
 
     <script>
