--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             }
         }
     </style>
-    <link rel="shortcut icon" type="image/x-icon" href="Favicon.png">
+    <link rel="icon" type="image/png" href="Favicon.png">
 </head>
 <body>
 
