--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Company</title>
+    <link rel="icon" type="image/png" href="Favicon.png">
     <style>
         body {
             margin: 0;
@@ -57,7 +58,6 @@
             }
         }
     </style>
-    <link rel="icon" type="img" href="Favicon.png">
 </head>
 <body>
 
